--- a/src/libs/meta-tour/libraries/pannellum.css
+++ b/src/libs/meta-tour/libraries/pannellum.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
-  background: #f4f4f4 url("./images/background.svg") repeat;
+  background-color: #343434;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -201,6 +201,7 @@
   font-size: 20px;
   display: none;
   color: #fff;
+  opacity: 0;
 }
 
 .pnlm-load-box p {
@@ -215,6 +216,7 @@
   height: 20px;
   margin: -10px 0 0 -10px;
   display: none;
+  opacity: 0;
 }
 
 .pnlm-loading {
