--- a/src/libs/meta-tour/libraries/pannellum.css
+++ b/src/libs/meta-tour/libraries/pannellum.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
-  background-color: #343434;
+  background: #f4f4f4 url("./images/background.svg") repeat;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
