--- a/src/libs/meta-tour/styles/index.css
+++ b/src/libs/meta-tour/styles/index.css
@@ -19,6 +19,10 @@
   background-color: #343434;
 }
 
+.mt-container {
+  transition: opacity 1s ease-out;
+}
+
 .hotspot-custom-maker .hotspot-maker-tooltip {
   position: absolute;
   border-radius: 6px;
@@ -249,27 +253,40 @@
 }
 
 .mt-loading {
-  display: flex;
-  font-size: 36px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  color: white;
+  top: calc(50% - 24px);
+  left: calc(50% - 24px);
   z-index: 12;
   transform: translate(-50%, -50%);
-  width: 70px;
-  height: 70px;
-  color: var(--main-color);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid rgba(0, 0, 0, 0.6);
+  border-top-color: #fff;
   pointer-events: none;
+  animation: loading-s 1s infinite linear;
 }
 
-.mt-loading::after {
-  content: "";
-  background-image: url("../libraries/images/loading.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+.background-loading {
+  position: absolute;
+  top: calc(50%);
+  left: calc(50%);
+  z-index: 12;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  font-size: 50px;
+  cursor: pointer;
+}
+
+@keyframes loading-s {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .box {
