--- a/src/libs/meta-tour/styles/index.css
+++ b/src/libs/meta-tour/styles/index.css
@@ -232,23 +232,19 @@
   justify-content: right;
 }
 
-.control-bottom-item {
-  position: relative;
+.mt-compass {
+  position: absolute;
   z-index: 42;
   cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  font-size: 12px;
   line-height: 30px;
   text-align: center;
   color: white;
   background-color: rgba(0, 0, 0, 0.6);
-  transition: all 0.4s;
+  transition: all 0.2s;
   margin: 0 2px;
-}
-
-.control-bottom-item.compass {
   font-size: 16px;
 }
 
@@ -271,7 +267,7 @@
   position: absolute;
   top: calc(50%);
   left: calc(50%);
-  z-index: 12;
+  z-index: 9999;
   transform: translate(-50%, -50%);
   width: 50px;
   height: 50px;
