--- a/src/libs/meta-tour/styles/index.css
+++ b/src/libs/meta-tour/styles/index.css
@@ -6,9 +6,9 @@
 }
 
 .mt-wrapper {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   overflow: hidden;
@@ -233,7 +233,6 @@
 }
 
 .mt-compass {
-  position: absolute;
   z-index: 42;
   cursor: pointer;
   width: 30px;
@@ -332,22 +331,27 @@
   z-index: 99;
   background: #fff;
   width: 300px;
-  height: 200px;
-  top: 20px;
-  right: 20px;
+  height: auto;
+  top: 40px;
+  right: 10px;
+  outline: 0;
+  transition: all 500ms ease-in;
 }
-.mt-map-render-container,
-.mt-map-ui {
+
+.mt-map-render-container {
   cursor: inherit;
   position: absolute;
   height: 100%;
   width: 100%;
+  outline: 0;
 }
 
 .mt-map-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-style: none;
+  vertical-align: middle;
 }
 
 .mt-pointer-base {
@@ -395,13 +399,18 @@
   opacity: 0.4;
   border-radius: 50%;
   background-color: var(--main-color);
+  transition: opacity 250ms ease-in-out;
+  box-shadow: inset 0px 0px 5px 1px rgba(0, 98, 255, 0.4);
+}
+.pointer-maker-content:hover {
+  opacity: 1 !important;
 }
 
 .view_direction__arrow {
   background: var(--main-color);
   background: linear-gradient(
     -45deg,
-    rgba(0, 97, 255, 0) 10%,
+    rgba(0, 98, 255, 0.4) 10%,
     var(--main-color) 100%
   );
   border-radius: 0 0 30px;
