--- a/src/libs/meta-tour/styles/index.css
+++ b/src/libs/meta-tour/styles/index.css
@@ -1,8 +1,126 @@
-@import "../pannellum/pannellum.css";
-
 :root {
   --main-color: red;
   --button-button-hover: #ffffff;
+}
+
+.mt-container {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+  cursor: default;
+  width: 100%;
+  height: 100%;
+  font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
+  background: #f4f4f4 url("../pannellum/images/background.svg") repeat;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: 0;
+  line-height: 1.4;
+  contain: content;
+  touch-action: none;
+}
+
+.mt-container * {
+  box-sizing: content-box;
+}
+
+.mt-ui {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.mt-grab {
+  cursor: grab;
+  cursor: url("../pannellum/images/grab.svg") 12 8, default;
+}
+
+.mt-grabbing {
+  cursor: grabbing;
+  cursor: url("../pannellum/images/grabbing.svg") 12 8, default;
+}
+
+.mt-sprite {
+  background-image: url("../pannellum/images/sprites.svg");
+}
+
+html:-moz-full-screen {
+  height: 100% !important;
+  width: 100% !important;
+  position: static !important;
+}
+html:-webkit-full-screen {
+  height: 100% !important;
+  width: 100% !important;
+  position: static !important;
+}
+html:-ms-fullscreen {
+  height: 100% !important;
+  width: 100% !important;
+  position: static !important;
+}
+html:fullscreen {
+  height: 100% !important;
+  width: 100% !important;
+  position: static !important;
+}
+
+.mt-render-container {
+  cursor: inherit;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.mt-hot-spot-debug-indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 26px;
+  height: 26px;
+  margin: -13px 0 0 -13px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 13px;
+  display: none;
+}
+
+.mt-hotspot-base {
+  position: absolute;
+  visibility: hidden;
+  cursor: default;
+  vertical-align: middle;
+  top: 0;
+  z-index: 1;
+}
+.mt-hotspot {
+  height: 26px;
+  width: 26px;
+  border-radius: 13px;
+}
+.mt-hotspot:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.mt-hotspot.mt-info {
+  background-position: 0 -104px;
+}
+.mt-hotspot.mt-visit {
+  background-position: 0 -130px;
+}
+
+.mt-dragfix {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.mt-pointer {
+  cursor: pointer;
 }
 
 .mt-wrapper {
@@ -203,6 +321,8 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  top: 0;
+  left: 0;
   background-size: cover;
   background-position: center;
   z-index: 99999;
@@ -332,20 +452,18 @@
 }
 
 .mt-map-container {
-  width: 100%;
   height: 100%;
-  border-radius: 5px;
-  border: 2px solid #fff;
   opacity: none;
   position: absolute;
   z-index: 99;
   background: #fff;
-  width: 300px;
+  width: 245px;
   height: auto;
   top: 40px;
   right: 10px;
   outline: 0;
-  transition: all 500ms ease-in;
+  user-select: none;
+  overflow: hidden;
 }
 
 .mt-map-render-container {
@@ -354,6 +472,7 @@
   height: 100%;
   width: 100%;
   outline: 0;
+  border: 1px solid #333;
 }
 
 .mt-map-image {
@@ -380,7 +499,6 @@
   margin-left: -220px;
   cursor: default;
   font-size: 12px;
-  line-height: 1;
   height: 24px;
   display: flex;
   align-items: center;
@@ -406,11 +524,12 @@
   left: 0;
   width: 15px;
   height: 15px;
-  opacity: 0.4;
+  opacity: 0.6;
   border-radius: 50%;
   background-color: var(--main-color);
   transition: opacity 250ms ease-in-out;
   box-shadow: inset 0px 0px 5px 1px rgba(0, 98, 255, 0.4);
+  cursor: pointer;
 }
 .pointer-maker-content:hover {
   opacity: 1 !important;
